--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    android:background="#D4FAF7"
+    android:orientation="vertical"
+    tools:context=".student.ui.MainActivity">
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/et_shape"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/std_icon" />
+
+    <EditText
+        android:id="@+id/et_userName"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/et_shape"
+        android:bufferType="normal"
+        android:gravity="center"
+        android:singleLine="true"
+        android:hint="Enter your User Name" />
+
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/et_shape"
+        android:bufferType="normal"
+        android:gravity="center"
+        android:hint="Enter your Password"
+        android:singleLine="true" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_login"
+        style="@style/button"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Button" />
+        android:text="login"
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
