--- a/app/src/main/res/layout/activity_subject_content.xml
+++ b/app/src/main/res/layout/activity_subject_content.xml
@@ -2,16 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frame_sub_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.admin.SubjectContent">
 
     <FrameLayout
+        android:id="@+id/frame_sub_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_nav"
-        android:layout_below="@id/nameSub">
+        android:layout_below="@id/nameSub"
+        >
+
 
     </FrameLayout>
 
