--- a/app/src/main/res/layout/activity_student_level.xml
+++ b/app/src/main/res/layout/activity_student_level.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
  android:orientation="vertical"
     android:gravity="center"
-    tools:context=".classes.Student_Level">
+    tools:context=".ui.Student_Level">
 
     <TextView
         android:id="@+id/textView5"
