--- a/app/src/main/res/layout/video_layout.xml
+++ b/app/src/main/res/layout/video_layout.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     app:cardBackgroundColor="@color/teal_200"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
-    app:cardPreventCornerOverlap="true">
+    app:cardUseCompatPadding="true"
+    app:cardPreventCornerOverlap="true"
+    android:paddingEnd="15dp"
+    android:paddingStart="15dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
