--- a/app/src/main/res/layout/fragment_videoes_youtube.xml
+++ b/app/src/main/res/layout/fragment_videoes_youtube.xml
@@ -1,8 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.admin.DocumentsFragment">
+    tools:context=".ui.admin.VideoesFragment">
+
+
 
 
     <RelativeLayout
@@ -10,39 +13,25 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rec_documents"
+            android:id="@+id/rec_video"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/btn_addDocument"
-            android:layout_marginTop="20dp"
+            android:layout_above="@id/btn_addvideo_youtube"
+            android:layout_marginBottom="-66dp"
             android:gravity="center"
             android:textSize="30sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_addDocument"
+            android:id="@+id/btn_addvideo_youtube"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="17dp"
+            android:layout_marginEnd="22dp"
             android:layout_marginBottom="71dp"
             android:clickable="true"
-            android:src="@android:drawable/ic_menu_upload" />
+            android:src="@android:drawable/ic_input_add" />
 
-        <EditText
-            android:id="@+id/et_file_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/btn_addDocument"
-            android:layout_alignBottom="@id/btn_addDocument"
-            android:layout_marginEnd="10dp"
-            android:layout_toStartOf="@id/btn_addDocument"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="@string/name"
-            android:inputType="text" />
 
     </RelativeLayout>
-
-
 </FrameLayout>
