--- a/app/src/main/res/layout/activity_videos_youtube.xml
+++ b/app/src/main/res/layout/activity_videos_youtube.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="20dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rec_videos"
+        android:id="@+id/rec_videos_youtube"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
