--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:background="#F2F8F3">
+    android:background="@color/background"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/tv_msg_send"
@@ -31,8 +31,8 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/chat_shape_recieve"
         android:paddingStart="20dp"
-        android:paddingEnd="10dp"
         android:paddingTop="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         android:text="اهلا بك اسراء"
         android:textColor="@color/black"
