--- a/app/src/main/res/drawable/et_shape.xml
+++ b/app/src/main/res/drawable/et_shape.xml
@@ -4,6 +4,6 @@
     <solid android:color="@color/white" />
 
     <corners android:radius="30dp" />
-<stroke android:width="1dp" android:color="#FF8DAFAD"/>
+<stroke android:width="1dp" android:color="@color/border"/>
 
 </shape>
