--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,13 +20,14 @@
 
     </LinearLayout>
 
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navgationView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@menu/nav_menu"
-            app:headerLayout="@layout/header_nav_layout"/>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navgationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header_nav_layout"
+        app:itemTextColor="@color/text"
+        app:menu="@menu/nav_menu" />
 
 
 
