--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D4FAF7"
+    android:background="@color/background"
     android:orientation="vertical"
     tools:context=".student.ui.Login_Activity">
 
@@ -23,9 +23,10 @@
         android:layout_height="50dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="50dp"
+        android:padding="10dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/et_shape"
+        android:background="@drawable/circle_img"
         android:bufferType="normal"
         android:gravity="center"
         android:singleLine="true"
@@ -39,8 +40,9 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/et_shape"
+        android:background="@drawable/circle_img"
         android:bufferType="normal"
+        android:padding="10dp"
         android:gravity="center"
         android:hint="Enter your Password"
         android:singleLine="true" />
