--- a/app/src/main/res/layout/activity_student_level.xml
+++ b/app/src/main/res/layout/activity_student_level.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="progress Level"
-        android:textColor="@color/design_default_color_secondary"
+        android:textColor="@color/text"
         android:textSize="20sp"
         android:textStyle="italic" />
 
@@ -34,8 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:shadowColor="@color/text"
         android:text="%60"
-        android:textSize="24sp"/>
+        android:textColor="@color/text"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/score"
@@ -46,7 +48,7 @@
         android:layout_marginTop="50dp"
         android:shadowColor="#0D0C0C"
         android:text="درجة الامتحان = 50/50 "
-        android:textColor="#0D0C0C"
+        android:textColor="@color/text"
         android:textSize="24sp" />
 
 
