--- a/app/src/main/res/layout/document_layout.xml
+++ b/app/src/main/res/layout/document_layout.xml
@@ -13,7 +13,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/teal_200">
+        android:background="@drawable/edit_text">
 
         <TextView
             android:id="@+id/tv_documentname"
@@ -24,6 +24,7 @@
             android:drawableStart="@drawable/doc"
             android:drawablePadding="10dp"
             android:padding="5dp"
+            android:textColor="@color/text"
             android:text="الاسم"
             android:textSize="20sp" />
     </RelativeLayout>
