--- a/app/src/main/res/layout/folder_layout.xml
+++ b/app/src/main/res/layout/folder_layout.xml
@@ -3,19 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    >
 
     <TextView
         android:id="@+id/folder_name"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
         android:layout_margin="5dp"
         android:background="@drawable/et_shape"
         android:drawableStart="@drawable/folder"
         android:drawablePadding="10dp"
+        android:gravity="center_vertical"
         android:paddingStart="10dp"
         android:text="الاسم"
+        android:textColor="@color/text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
