--- a/app/src/main/res/layout/fragment_folders.xml
+++ b/app/src/main/res/layout/fragment_folders.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:padding="10dp"
     android:orientation="vertical"
-
+    android:background="@color/background"
     >
 
 
@@ -13,7 +13,7 @@
         android:id="@+id/rec_folder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+
 
         />
 
