--- a/app/src/main/res/layout/fragment_students.xml
+++ b/app/src/main/res/layout/fragment_students.xml
@@ -4,28 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:orientation="vertical"
 
- >
+    android:background="@color/background"
+    android:orientation="vertical">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_students"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-         android:layout_marginBottom="60dp"
-        />
+        android:layout_marginBottom="60dp"
+        android:background="@color/background" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fbtn_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
-        android:clickable="true"
-       android:contextClickable="true"
-        android:src="@android:drawable/ic_input_add"
         android:layout_margin="10dp"
+        android:clickable="true"
+        android:contextClickable="true"
+        android:src="@android:drawable/ic_input_add"
 
         />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
