--- a/app/src/main/res/layout/fragment_videoes.xml
+++ b/app/src/main/res/layout/fragment_videoes.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".ui.admin.VideoesYouTubeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -28,6 +29,7 @@
             android:layout_marginBottom="71dp"
             android:clickable="true"
             android:src="@android:drawable/ic_input_add" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_pick_video"
             android:layout_width="wrap_content"
@@ -37,8 +39,8 @@
             android:layout_marginEnd="22dp"
             android:layout_marginBottom="71dp"
             android:clickable="true"
-            android:visibility="gone"
-            android:src="@android:drawable/ic_menu_upload" />
+            android:src="@android:drawable/ic_menu_upload"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/et_videoName"
