--- a/app/src/main/res/layout/header_nav_layout.xml
+++ b/app/src/main/res/layout/header_nav_layout.xml
@@ -3,30 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="#8DAFAD"
+    android:background="@color/background"
     android:orientation="vertical">
 
-<ImageView
-    android:id="@+id/teach_img"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="20dp"
-    android:src="@drawable/person"
-    android:background="@drawable/circle_img"
-    android:scaleType="centerCrop"
-    />
+    <ImageView
+        android:id="@+id/teach_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/circle_img"
+        android:scaleType="centerCrop"
+        android:src="@drawable/person" />
 
     <TextView
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/teach_img"
+        android:layout_alignStart="@+id/teach_img"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/teacher_name"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_below="@+id/teach_img"
-        android:layout_alignStart="@+id/teach_img"
-        />
+        android:textColor="@color/text"
+        android:textColorLink="@color/text"
+        android:textSize="20sp" />
 </RelativeLayout>
