--- a/app/src/main/res/layout/student_layout.xml
+++ b/app/src/main/res/layout/student_layout.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-   app:cardUseCompatPadding="true"
+    android:clickable="true"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
-    android:clickable="true"
-    app:cardBackgroundColor="#8DAFAD"
+    app:cardUseCompatPadding="true"
 
 
-   >
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-   >
+        android:paddingHorizontal="10dp">
 
         <TextView
             android:id="@+id/name"
@@ -27,6 +27,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="@string/name"
+            android:textColor="@color/text"
             android:textSize="20sp" />
 
         <TextView
@@ -39,6 +40,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="5dp"
             android:text="@string/phoneNo"
+            android:textColor="@color/text"
             android:textSize="20sp" />
 
         <TextView
@@ -51,18 +53,19 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="5dp"
             android:text="@string/subject"
+            android:textColor="@color/text"
             android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
+            app:srcCompat="@drawable/img_3" />
 
         <ImageView
             android:id="@+id/edit"
@@ -74,7 +77,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            app:srcCompat="@drawable/ic_baseline_edit_24" />
+            app:srcCompat="@drawable/edit_24" />
 
     </RelativeLayout>
 
