--- a/app/src/main/res/layout/video_layout.xml
+++ b/app/src/main/res/layout/video_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/teal_200"
+    app:cardBackgroundColor="@color/background"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
     app:cardUseCompatPadding="true"
@@ -13,18 +13,22 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_text"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tv_Videoname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:drawableStart="@drawable/ic__video"
             android:drawablePadding="10dp"
             android:padding="5dp"
             android:text="الاسم"
+            android:textColor="@color/text"
             android:textSize="20sp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
