--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#4BC22A</color>
+    <color name="background">#F2EBE4</color>
+    <color name="border">#C22A33</color>
+    <color name="text">#602818</color>
 </resources>
